RESOLVED FIXED155762
MallocBench: consolidate regression testing for aligned allocation
https://bugs.webkit.org/show_bug.cgi?id=155762
Summary MallocBench: consolidate regression testing for aligned allocation
Geoffrey Garen
Reported 2016-03-22 12:03:59 PDT
MallocBench: consolidate regression testing for aligned allocation
Attachments
Patch (10.73 KB, patch)
2016-03-22 12:05 PDT, Geoffrey Garen
msaboff: review+
Geoffrey Garen
Comment 1 2016-03-22 12:05:48 PDT
Michael Saboff
Comment 2 2016-03-22 12:17:05 PDT
Comment on attachment 274672 [details] Patch r=me
Geoffrey Garen
Comment 3 2016-03-22 12:39:38 PDT
Note You need to log in before you can comment on or make changes to this bug.