MallocBench: consolidate regression testing for aligned allocation https://bugs.webkit.org/show_bug.cgi?id=155762

Reviewed by Michael Saboff.

* MallocBench/MallocBench.xcodeproj/project.pbxproj:
* MallocBench/MallocBench/Benchmark.cpp:
* MallocBench/MallocBench/memalign.cpp: Removed.
* MallocBench/MallocBench/memalign.h: Removed. The stress_aligned test
covers this and much more.

* MallocBench/MallocBench/stress_aligned.cpp:
(benchmark_stress_aligned): Include specific tests for extreme sizes
and alignments.


Canonical link: https://commits.webkit.org/173862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198546 268f45cc-cd09-0410-ab3c-d52691b4dbfc