PerformanceTests/MallocBench/MallocBench/stress_aligned.cpp
@@ -145,6 +145,24 @@ void benchmark_stress_aligned(CommandLine&)
     
     srandom(1); // For consistency between runs.
 
+    size_t limit = 0x000007fffffffffful;
+    
+    for (size_t size = 0; size < limit; size = std::max(size, sizeof(void*)) * 2) {
+        for (size_t alignment = sizeof(void*); alignment < limit; alignment *= 2) {
+            void* object = mbmemalign(alignment, size);
+            if (reinterpret_cast<uintptr_t>(object) & (alignment - 1))
+                abort();
+            mbfree(object, size);
+        }
+
+        for (size_t alignment = sizeof(void*); alignment < limit / 4; alignment *= 2) {
+            void* object = mbmemalign(alignment, size + 128);
+            if (reinterpret_cast<uintptr_t>(object) & (alignment - 1))
+                abort();
+            mbfree(object, size + 128);
+        }
+    }
+
     std::vector<Object> objects;
     
     SizeStream sizeStream;
